--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
+        <link rel="stylesheet" href="resume.css">
+        <meta charset="UTF-8">
         <title>Enoch B. Whitaker's Resume</title>
-        <style>
-        h1 {text-align: center;}
-        </style>
     </head>
     <body>
             <header>
-                <h1>Enoch Whitaker</h1>
+                <tr>
+                <th>Contact Info</th>
+                <th>Schooling Experience</th>
+                <th>Work Experience</th>
+                <th>Life Achievements</th>
+                <th>Professional Goals</th>
+                <th>Skills, Tools, Certifications</th>
+                </tr>
+                
             </header>
         <main>
-            <div class="Profile Pic">
-                <img src="images/pfp.jpg" alt = "photo of me" align = "right">
             </div>
             <div class="Contact Information">
                 <dl><b>Contact Information</b></dl>
@@ -44,7 +49,7 @@
 
         </aside>
         <footer>
-
+            <p>Test Test Test Test</p>
         </footer>
     </body>
 </html>
