--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -19,7 +19,10 @@
             </header>
         <main>
             </div>
-            <div class="Contact Information">
+            <div class = "Main Page"></div>
+            <p>Enoch Whitaker,</p>
+            <p>Software Engineer</p>
+            <!--<div class="Contact Information">
                 <dl><b>Contact Information</b></dl>
                 <dt>idkwhattoputhere@funnymail.com</dt>
                 <dt>435-123-456</dt>
@@ -42,7 +45,7 @@
             </div>
             <div class="Skills, Tools, Certifications">
                 <dl><b>Skills, Tools, Certifications</b></dl>
-                <dt>Can tie a square knot really fast, I carry a swiss army knife at all times, and I am fork lift certified</dt>
+                <dt>Can tie a square knot really fast, I carry a swiss army knife at all times, and I am fork lift certified</dt>-->
             </div>
         </main>
         <aside>
