--- a/Resume/resume.html
+++ b/Resume/resume.html
@@ -7,15 +7,16 @@
     </head>
     <body>
             <header>
-                <tr>
-                <th>Contact Info</th>
-                <th>Schooling Experience</th>
-                <th>Work Experience</th>
-                <th>Life Achievements</th>
-                <th>Professional Goals</th>
-                <th>Skills, Tools, Certifications</th>
-                </tr>
-                
+                <div id = pagelinks>
+                    <ul>
+                        <li><a href="#">Contact Information</a></li>
+                        <li><a href="#">Schooling Experience</a></li>
+                        <li><a href="#">Work Experience</a></li>
+                        <li><a href="#">Life Achievements</a></li>
+                        <li><a href="#">Professional Goals</a></li>
+                        <li><a href="#">Skills, Tools, Certifications</a></li>
+                    </ul>
+                </div>  
             </header>
         <main>
             </div>
