--- a/Resume/goals/goals.html
+++ b/Resume/goals/goals.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="goals.css">
         <meta charset="UTF-8">
         <title>Enoch B. Whitaker's Resume</title>
     </head>
@@ -18,9 +18,12 @@
                 </div>  
             </header>
         <main>
+            </div>
             <div class = "Main Page"></div>
-            <p>Enoch Whitaker,</p>
-            <p>Software Engineer</p>
+            <div class="Professional Goals">
+                <dl><b>Professional Goals</b></dl>
+                <dt>To make bank and look cool doing it</dt>
+            </div>
         </main>
         <aside>
         </aside>
