--- a/Resume/life/life.html
+++ b/Resume/life/life.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="life.css">
         <meta charset="UTF-8">
         <title>Enoch B. Whitaker's Resume</title>
     </head>
@@ -19,8 +19,9 @@
             </header>
         <main>
             <div class = "Main Page"></div>
-            <p>Enoch Whitaker,</p>
-            <p>Software Engineer</p>
+            <div class="Life Achievements">
+                <dl><b>Life Achievements</b></dl>
+                <dt>I am an eagle scout </dt>
         </main>
         <aside>
         </aside>
