--- a/Resume/schooling/schooling.html
+++ b/Resume/schooling/schooling.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="schooling.css">
         <meta charset="UTF-8">
         <title>Enoch B. Whitaker's Resume</title>
     </head>
@@ -19,10 +19,12 @@
             </header>
         <main>
             <div class = "Main Page"></div>
-            <p>Enoch Whitaker,</p>
-            <p>Software Engineer</p>
+            <div class="Schooling Experience">
+                <dl><b>Schooling Experience</b></dl>
+                <dt>Graduated Top of My Class At Comedy High</dt>
         </main>
         <aside>
+
         </aside>
         <footer>
             <p>Created by Enoch Whitaker™, 2022. All Rights Reserved</p>
