--- a/Resume/contactinfo/contactinfo.html
+++ b/Resume/contactinfo/contactinfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="contactinfo.css">
         <meta charset="UTF-8">
         <title>Enoch B. Whitaker's Resume</title>
     </head>
@@ -19,8 +19,11 @@
             </header>
         <main>
             <div class = "Main Page"></div>
-            <p>Enoch Whitaker,</p>
-            <p>Software Engineer</p>
+            <div class="Contact Information">
+                <dl><b>Contact Information</b></dl>
+                <dt>idkwhattoputhere@funnymail.com</dt>
+                <dt>435-123-456</dt>
+            </div>
         </main>
         <aside>
         </aside>
