--- a/Resume/work/work.html
+++ b/Resume/work/work.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="eng">
     <head>
-        <link rel="stylesheet" href="resume.css">
+        <link rel="stylesheet" href="work.css">
         <meta charset="UTF-8">
         <title>Enoch B. Whitaker's Resume</title>
     </head>
@@ -19,8 +19,9 @@
             </header>
         <main>
             <div class = "Main Page"></div>
-            <p>Enoch Whitaker,</p>
-            <p>Software Engineer</p>
+            <div class="Work Experience">
+                <dl><b>Work Experience</b></dl>
+                <dt>I am a very hard worker and could potentially be your best employee ever (source: trust me bro)</dt>
         </main>
         <aside>
         </aside>
