Possible Final Commit

--- a/Resume/work/work.html
+++ b/Resume/work/work.html
@@ -8,12 +8,13 @@
     <body>
             <header>
                 <div id = pagelinks>
+                    <a href="../resume.html"><img src="../images/trans.png" width=40; height=40;></a>
                     <ul>
-                        <li><a href="contactinfo/contactinfo.html">Contact Information</a></li>
-                        <li><a href="schooling/schooling.html">Schooling Experience</a></li>
-                        <li><a href="work/work.html">Work Experience</a></li>
-                        <li><a href="life/life.html">Life Achievements</a></li>
-                        <li><a href="goals/goals.html">Professional Goals</a></li>
+                        <li><a href="../contactinfo/contactinfo.html">Contact Information</a></li>
+                        <li><a href="../schooling/schooling.html">Schooling Experience</a></li>
+                        <li><a href="work.html">Work Experience</a></li>
+                        <li><a href="../life/life.html">Life Achievements</a></li>
+                        <li><a href="../goals/goals.html">Professional Goals</a></li>
                     </ul>
                 </div>  
             </header>
