--- a/Resume/contactinfo/contactinfo.html
+++ b/Resume/contactinfo/contactinfo.html
@@ -8,17 +8,17 @@
     <body>
             <header>
                 <div id = pagelinks>
+                    <a href="../resume.html"><img src="../images/trans.png" width=40; height=40;></a>
                     <ul>
-                        <li><a href="contactinfo/contactinfo.html">Contact Information</a></li>
-                        <li><a href="schooling/schooling.html">Schooling Experience</a></li>
-                        <li><a href="work/work.html">Work Experience</a></li>
-                        <li><a href="life/life.html">Life Achievements</a></li>
-                        <li><a href="goals/goals.html">Professional Goals</a></li>
+                        <li><a href="contactinfo.html">Contact Information</a></li>
+                        <li><a href="../schooling/schooling.html">Schooling Experience</a></li>
+                        <li><a href="../work/work.html">Work Experience</a></li>
+                        <li><a href="../life/life.html">Life Achievements</a></li>
+                        <li><a href="../goals/goals.html">Professional Goals</a></li>
                     </ul>
                 </div>  
             </header>
         <main>
-            <div class = "Main Page"></div>
             <div class="Contact Information">
                 <dl><b>Contact Information</b></dl>
                 <dt>idkwhattoputhere@funnymail.com</dt>
