--- a/Final/final.html
+++ b/Final/final.html
@@ -1,16 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
-    <!doctype html>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="styles.css">
+<link rel="icon" type="image/x-icon" href="source/goalie.png">
+<title>Document</title>
+<!doctype html>
+
 <body>
-  <header id="pageHeader">Header</header>
-  <article id="mainArticle">Article</article>
-  <div id="leftside">Side</div>
-  <div id="rightside">Side</div>
+  <header id="pageHeader">
+    <nav>
+      <img src="source/goaltendersvg.svg" alt="logo">
+      <a id="leaguespage">League Tables</a>
+      <a id="scorespgae">Live Scores</a>
+      <a id="transferspage">Transfer News</a>
+      <a id="uefapage">UEFA Champions League</a>
+      <a>Europa League</a>
+    </nav>
+  </header>
+  <article id="mainArticle">
+    <video width="100%" height="100%" autoplay muted loop>
+      <source src="source/premierleagueopening.mp4" type="video/mp4">
+    </video>
+    <video width="100%" height="100%" autoplay muted loop>
+      <source src="source/laliga.mp4" type="video/mp4">
+    </video>
+    <video width="100%" height="100%" autoplay muted loop>
+      <source src="source/Bundesliga.mp4" type="video/mp4">
+    </video>
+    <video width="100%" height="100%" autoplay muted loop>
+      <source src="source/seriea.mp4" type="video/mp4">
+    </video>
+    <video width="100%" height="100%" autoplay muted loop>
+      <source src="source/ligue1.mp4" type="video/mp4">
+    </video>
+  </article>
   <footer id="pageFooter">Footer</footer>
 </body>
+
 </html>
