--- a/Final/final.html
+++ b/Final/final.html
@@ -5,13 +5,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" type="image/x-icon" href="source/goalie.png">
+<link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
 <title>Document</title>
 <!doctype html>
 
 <body>
   <header id="pageHeader">
     <nav>
-      <img src="source/goaltendersvg.svg" alt="logo">
+      <img src="source/goaltenderfinal.jpg" alt="logo">
       <a id="leaguespage">League Tables</a>
       <a id="scorespgae">Live Scores</a>
       <a id="transferspage">Transfer News</a>
@@ -20,21 +21,51 @@
     </nav>
   </header>
   <article id="mainArticle">
-    <video width="100%" height="100%" autoplay muted loop>
-      <source src="source/premierleagueopening.mp4" type="video/mp4">
-    </video>
-    <video width="100%" height="100%" autoplay muted loop>
-      <source src="source/laliga.mp4" type="video/mp4">
-    </video>
-    <video width="100%" height="100%" autoplay muted loop>
-      <source src="source/Bundesliga.mp4" type="video/mp4">
-    </video>
-    <video width="100%" height="100%" autoplay muted loop>
-      <source src="source/seriea.mp4" type="video/mp4">
-    </video>
-    <video width="100%" height="100%" autoplay muted loop>
-      <source src="source/ligue1.mp4" type="video/mp4">
-    </video>
+    <div class="container">
+      <video width="100%" height="100%" autoplay muted loop>
+        <source src="source/premierleagueopening.mp4" type="video/mp4">
+      </video>
+      <div class="overlay">
+        <p id="PL1">Get The Latest Stats In The </p>
+        <p id="PL2">Premier League</p>
+      </div>
+    </div>
+    <div class="container">
+      <video width="100%" height="100%" autoplay muted loop>
+        <source src="source/laliga.mp4" type="video/mp4">
+      </video>
+      <div class="overlay">
+        <p id="PL1">Get The Latest Stats In</p>
+        <p id="PL2">La Liga</p>
+      </div>
+    </div>
+    <div class="container">
+      <video width="100%" height="100%" autoplay muted loop>
+        <source src="source/Bundesliga.mp4" type="video/mp4">
+      </video>
+      <div class="overlay">
+        <p id="PL1">Get The Latest Stats In The </p>
+        <p id="PL2">Bundesliga</p>
+      </div>
+    </div>
+    <div class="container">
+      <video width="100%" height="100%" autoplay muted loop>
+        <source src="source/seriea.mp4" type="video/mp4">
+      </video>
+      <div class="overlay">
+        <p id="PL1">Get The Latest Stats In</p>
+        <p id="PL2">Serie A</p>
+      </div>
+    </div>
+    <div class="container">
+      <video width="100%" height="100%" autoplay muted loop>
+        <source src="source/ligue1.mp4" type="video/mp4">
+      </video>
+      <div class="overlay">
+        <p id="PL1">Get the latest stats in</p>
+        <p id="PL2">Ligue Un</p>
+      </div>
+    </div>
   </article>
   <footer id="pageFooter">Footer</footer>
 </body>
