--- a/Final/final.html
+++ b/Final/final.html
@@ -10,20 +10,25 @@
 <!doctype html>
 
 <body>
+  <script>
+    window.onload = function() {document.body.scrollTop = document.documentElement.scrollTop = 0;};
+  </script>
+
+
   <header id="pageHeader">
     <nav>
-      <img src="source/goaltenderfinal.jpg" alt="logo">
-      <a id="leaguespage">League Tables</a>
-      <a id="scorespgae">Live Scores</a>
-      <a id="transferspage">Transfer News</a>
-      <a id="uefapage">UEFA Champions League</a>
-      <a>Europa League</a>
+      <a href="final.html" ><img src="../source/goaltenderfinal.jpg" alt="logo" ></a>
+      <a id="leaguespage" link href="../League Tables/leaguetables.html">League Tables</a>
+      <a id="scorespage"  link href="../Live Scores/Livescores.html">Live Scores</a>
+      <a id="transferspage" link href="../Transfer News/Transfernews.html">Transfer News</a>
+      <a id="uefapage" link href="../UEFA/UEFA.html">UEFA Champions League</a>
+      <a id="europapage" link href="../Europa/Europa.html">Europa League</a>
     </nav>
   </header>
   <article id="mainArticle">
     <div class="container">
       <video width="100%" height="100%" autoplay muted loop>
-        <source src="source/premierleagueopening.mp4" type="video/mp4">
+        <source src="../source/premierleagueopening.mp4" type="video/mp4">
       </video>
       <div class="overlay">
         <p id="PL1">Get The Latest Stats In The </p>
@@ -32,7 +37,7 @@
     </div>
     <div class="container">
       <video width="100%" height="100%" autoplay muted loop>
-        <source src="source/laliga.mp4" type="video/mp4">
+        <source src="../source/laliga.mp4" type="video/mp4">
       </video>
       <div class="overlay">
         <p id="PL1">Get The Latest Stats In</p>
@@ -41,7 +46,7 @@
     </div>
     <div class="container">
       <video width="100%" height="100%" autoplay muted loop>
-        <source src="source/Bundesliga.mp4" type="video/mp4">
+        <source src="../source/Bundesliga.mp4" type="video/mp4">
       </video>
       <div class="overlay">
         <p id="PL1">Get The Latest Stats In The </p>
@@ -50,7 +55,7 @@
     </div>
     <div class="container">
       <video width="100%" height="100%" autoplay muted loop>
-        <source src="source/seriea.mp4" type="video/mp4">
+        <source src="../source/seriea.mp4" type="video/mp4">
       </video>
       <div class="overlay">
         <p id="PL1">Get The Latest Stats In</p>
@@ -59,7 +64,7 @@
     </div>
     <div class="container">
       <video width="100%" height="100%" autoplay muted loop>
-        <source src="source/ligue1.mp4" type="video/mp4">
+        <source src="../source/ligue1.mp4" type="video/mp4">
       </video>
       <div class="overlay">
         <p id="PL1">Get the latest stats in</p>
@@ -68,6 +73,9 @@
     </div>
   </article>
   <footer id="pageFooter">Footer</footer>
+
+
+
 </body>
 
 </html>
