--- a/Final/final.html
+++ b/Final/final.html
@@ -25,7 +25,7 @@
       <a id="europapage" link href="../Europa/Europa.html">Europa League</a>
     </nav>
   </header>
-  <article id="mainArticle">
+  <article class="mainArticle">
     <div class="container">
       <video width="100%" height="100%" autoplay muted loop>
         <source src="../source/premierleagueopening.mp4" type="video/mp4">
