--- a/Final/final.html
+++ b/Final/final.html
@@ -6,13 +6,11 @@
 <link rel="stylesheet" href="styles.css">
 <link rel="icon" type="image/x-icon" href="source/goalie.png">
 <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
-<title>Document</title>
+<title>Goaltender.com</title>
 <!doctype html>
 
 <body>
-  <script>
-    window.onload = function() {document.body.scrollTop = document.documentElement.scrollTop = 0;};
-  </script>
+  
 
 
   <header id="pageHeader">
@@ -74,6 +72,9 @@
   </article>
   <footer id="pageFooter">Footer</footer>
 
+  <script>
+    window.onload = function() {document.body.scrollTop = document.documentElement.scrollTop = 0;};
+  </script>
 
 
 </body>
